--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,13 @@
                     donde vamos a explicar las cosas incréibles 
                     que se pueden hacer con ramas
                 </p>
+                <p>
+                    Los blogs so nla mejor forma de compartir
+                    información y tus ideas. Mucho más que ir a
+                    conferencias o salir en youtube. Excepto si
+                    eres un rockstar. Pero estadísticamente no lo
+                    eres.... por ahora.
+                </p>
             </div>
         </div>
     </body>
